# minmadplan

./: LICENSE  README.md  basket_generator.py  pyproject.toml  recipes.csv  scrape_recipes.py  scratch.py  streamlit_app.py  streamlit_utils.py
